restructuring project, module import fixes, makefile in progress

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,9 +1,20 @@
-PYTHON = $(VENV)/bin/python3
-PIP = $(VENV)/bin/pip
+PY = py
+APP = app.py
+ZIP = xberez04_xvinog00_xmazur08
 
+.PHONY: all pack clean test doc run profile setup test-basic test-advanced
 
-clean:
-    rm -rf tests/__pycache__
+test: test-basic test-advanced
+
+test-basic:
+	$(PY) -m unittest -v test-basic.py
+
+test-advanced:
+	$(PY) -m unittest -v test-advanced.py
+
+run:
+	$(PY) calculator/$(APP)
 
 setup: requirements.txt
-    pip install -r requirements.txt
+	pip install -r $<
+
