restructure, fixed import error in whole project

--- a/src/Makefile
+++ b/src/Makefile
@@ -2,21 +2,23 @@ APP = calculator/app.py
 ZIP = xberez04_xvinog00_xmazur08
 
 ifeq ($(OS), Windows_NT)
-PY = py
+	PY = py
 else
-PY = python3.10
+	PY = python3.10
 endif
 
-# cat Makefile|sed "s/        /\t/" > Makefile
-.PHONY: all pack clean test doc run profile setup test-basic test-advanced
+.PHONY: all pack clean test doc run profile setup test-basic test-advanced test-expr
 
-test: test-basic test-advanced
+test: test-basic test-advanced test-expr
 
 test-basic:
 		$(PY) -m unittest -v test-basic.py
 
 test-advanced:
 		$(PY) -m unittest -v test-advanced.py
+
+test-expr:
+		$(PY) -m unittest -v test-expression.py
 
 run: build
 		$(PY) $(APP)
@@ -25,10 +27,10 @@ setup: requirements.txt
 		pip install -r $<
 
 build: setup
-		pyinstaller --onefile calculator/app.py
+		pyinstaller --onefile --noconsole calculator/app.py
 
 profile: profiling.py
 		$(PY) -m profile -o ../profiling/output10_1 $< < ../profiling/10_1
 
 clean:
-		rm -rf ../src/calculator/build ../src/calculator/dist
+		rm -rf ../src/build/ ../src/dist/
