install ready, makefile fixes, other minor fixes

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,36 +1,55 @@
-APP = calculator/app.py
 ZIP = xberez04_xvinog00_xmazur08
+APP = Calculator
 
 ifeq ($(OS), Windows_NT)
 	PY = py
+	CLEANUP = rd /S /Q
+	BUILDDIRS = "build" "dist"
 else
 	PY = python3.10
+	CLEANUP = rm -rf
+	BUILDDIRS = ../src/build/ ../src/dist/
 endif
 
 .PHONY: all pack clean test doc run profile setup test-basic test-advanced test-expr
 
 test: test-basic test-advanced test-expr
 
-test-basic:
-		$(PY) -m unittest -v test-basic.py
+test-basic: test-basic.py
+		$(PY) -m unittest -v $<
 
-test-advanced:
-		$(PY) -m unittest -v test-advanced.py
+test-advanced: test-advanced.py
+		$(PY) -m unittest -v $<
 
-test-expr:
-		$(PY) -m unittest -v test-expression.py
+test-expr: test-expression.py
+		$(PY) -m unittest -v $<
 
-run: build
-		$(PY) $(APP)
+run: calculator/app.py
+		$(PY) $<
 
 setup: requirements.txt
 		pip install -r $<
 
 build: setup
-		pyinstaller --onefile --noconsole calculator/app.py
+		pyinstaller app.spec
+		$(MOVE) dist/Calculator.* ../
 
 profile: profiling.py
 		$(PY) -m profile -o ../profiling/output10_1 $< < ../profiling/10_1
 
 clean:
-		rm -rf ../src/build/ ../src/dist/
+		$(CLEANUP) $(BUILDDIRS)
+
+pack: $(ZIP)
+		mkdir -p ../../$</doc
+		mkdir -p ../../$</install
+		mkdir -p ../../$</repo
+
+		cp -r ../doc/* ../../$</doc
+		cp ../src/dist/* ../../$</install
+		cp -r ../* ../../$</repo
+
+		rm -rf ../../$</repo/doc
+		cd ../..
+		zip -r $(ZIP).zip $(ZIP)
+
