--- a/src/Makefile
+++ b/src/Makefile
@@ -38,18 +38,21 @@ profile: profiling.py
 		$(PY) -m profile -o ../profiling/output10_1 $< < ../profiling/10_1
 
 clean:
-		$(CLEANUP) $(BUILDDIRS)
+		# $(CLEANUP) $(BUILDDIRS)
+		rm -rf __pycache__/
+		rm -rf calculator/__pycache__/
+		rm -rf calculator/calclib/__pycache__/
+		rm calculator/.DS_Store
 
-pack: $(ZIP)
-		mkdir -p ../../$</doc
-		mkdir -p ../../$</install
-		mkdir -p ../../$</repo
+pack:
+		mkdir -p ../../$(ZIP)/doc
+		mkdir -p ../../$(ZIP)/install
+		mkdir -p ../../$(ZIP)/repo
 
-		cp -r ../doc/* ../../$</doc
-		cp ../src/dist/* ../../$</install
-		cp -r ../* ../../$</repo
+		cp -a ../doc/* ../../$(ZIP)/doc
+		cp ../src/dist/* ../../$(ZIP)/install
+		cp -a ../. ../../$(ZIP)/repo
 
-		rm -rf ../../$</repo/doc
-		cd ../..
-		zip -r $(ZIP).zip $(ZIP)
+		rm -rf ../../$(ZIP)/repo/doc ../../$(ZIP)/repo/src/build/ ../../$(ZIP)/repo/src/dist/
+		cd ../.. && zip -r $(ZIP).zip $(ZIP)
 
