--- a/src/Makefile
+++ b/src/Makefile
@@ -41,7 +41,7 @@ profile: profiling.py
 		printf "\n## Statistics for input size of 1000000\n\n" >> ../profiling/vystup.txt
 		$(PY) -m profile $< < ../profiling/10_6 >> ../profiling/vystup.txt
 clean:
-		 $(CLEANUP) $(BUILDDIRS)
+		$(CLEANUP) $(BUILDDIRS)
 		rm -rf __pycache__/
 		rm -rf calculator/__pycache__/
 		rm -rf calculator/calclib/__pycache__/
@@ -53,6 +53,7 @@ pack:
 
 		cp -a ../doc/* ../../$(ZIP)/doc
 		cp ../src/dist/* ../../$(ZIP)/install
+		cp ../src/profiling.py ../../$(ZIP)/install
 		cp -a ../. ../../$(ZIP)/repo
 
 		rm -rf ../../$(ZIP)/repo/doc ../../$(ZIP)/repo/src/build/ ../../$(ZIP)/repo/src/dist/
